Dark mode fixes

--- a/_sass/minimal-light.scss
+++ b/_sass/minimal-light.scss
@@ -228,7 +228,7 @@ papertitle {
       width: 8.00em;
     }
 
-h3, h4, h5, h6 {
+h3, h4, h5, h6, summary {
   font-weight: 600;
   color:#043361;
   margin:0 0 20px;
@@ -248,7 +248,7 @@ h2 {
 }
 
 @media (prefers-color-scheme: dark) {
-  h1, h3, h4, h5, h6 {
+  h1, h3, h4, h5, h6, summary {
     color:rgb(62, 183, 240);
   }
 
@@ -603,7 +603,7 @@ details {
 }
 
 summary {
-  color:#043361;
+  /*color:#043361;*/
   font-weight: 500;
   margin:2px 0px 15px;
   font-size: 157%;
